force-app/main/default/objects/LeaseNetLineItem__c/LeaseNetLineItem__c.object-meta.xml
<CustomObject>
    <label>LeaseNetLineItem</label>
    <nameField>
        <label>LeaseNetLineItem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LeaseNetLineItems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>