force-app/main/default/objects/LeaseNetLineItem__c/fields/Agreement__c.field-meta.xml
<CustomField>
    <fullName>Agreement__c</fullName>
    <label>Agreement</label>
    <referenceTo>Agreement__c</referenceTo>
    <relationshipLabel>LeaseNetLineItems</relationshipLabel>
    <relationshipName>LeaseNetLineItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>