force-app/main/default/objects/LeaseNetLineItem__c/fields/Current_Amount__c.field-meta.xml
<CustomField>
    <fullName>Current_Amount__c</fullName>
    <label>LeaseNet Current Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>