force-app/main/default/objects/LeaseNetLineItem__c/fields/Current_Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Current_Term_Months__c</fullName>
    <label>Current Term Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>