force-app/main/default/objects/LeaseNetLineItem__c/fields/Current_Term_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Term_Start_Date__c</fullName>
    <label>Current Term Start Date</label>
    <type>Date</type>
</CustomField>