force-app/main/default/objects/LeaseNetLineItem__c/fields/Escalation_Amt_Rate__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Amt_Rate__c</fullName>
    <label>Escalation Amt Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>