force-app/main/default/objects/LeaseNetLineItem__c/fields/Escalation_Timing__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Timing__c</fullName>
    <label>Escalation Timing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>