force-app/main/default/objects/LeaseNetLineItem__c/fields/Escalation_Type__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Type__c</fullName>
    <label>Escalation Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>