force-app/main/default/objects/LeaseNetLineItem__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <label>LeaseNet Frequency</label>
    <length>200</length>
    <type>Text</type>
</CustomField>