force-app/main/default/objects/LeaseNetLineItem__c/fields/Next_Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Next_Term_Months__c</fullName>
    <label>Next Term Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>