force-app/main/default/objects/LeaseNetLineItem__c/fields/Number_Of_Renewals__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Renewals__c</fullName>
    <label>Number Of Renewals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>