force-app/main/default/objects/LeaseNetLineItem__c/fields/Rent_Commencement_Date__c.field-meta.xml
<CustomField>
    <fullName>Rent_Commencement_Date__c</fullName>
    <label>Rent Commencement Date</label>
    <type>Date</type>
</CustomField>