force-app/main/default/objects/LeaseNetLineItem__c/fields/Rev_Share_Notes__c.field-meta.xml
<CustomField>
    <fullName>Rev_Share_Notes__c</fullName>
    <label>Rev Share Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>