force-app/main/default/objects/LeaseNetLineItem__c/fields/Revenue_Share__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Share__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Revenue Share</label>
    <type>Checkbox</type>
</CustomField>