force-app/main/default/objects/LeaseNetLineItem__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>LeaseNet Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>